# mods_box

./: index.html  package-lock.json  package.json  read.txt  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  error.rs  lib.rs
src-tauri/src/commands/: backup.rs  conflict.rs  game.rs  mod.rs  mod_manager.rs
src-tauri/src/core/: config.rs  conflict.rs  installer.rs  loader.rs  mod.rs
src-tauri/src/models/: backup.rs  game.rs  mod.rs  mod_info.rs
src-tauri/src/utils/: file.rs  hash.rs  mod.rs  registry.rs
src/components/auth/: LoginPage.tsx
src/components/backup/: BackupManager.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/mods/: ConflictResolver.tsx  ModCard.tsx  ModDetail.tsx  ModInstall.tsx  ModList.tsx  index.ts
src/components/settings/: About.tsx  Settings.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  index.ts  input.tsx  select.tsx  switch.tsx
src/lib/: utils.ts
src/stores/: modStore.ts
src/types/: index.ts
